--- a/data/01 - Clean.ipynb
+++ b/data/01 - Clean.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os\n",
-    "import matplotlib as plt"
+    "import os"
    ]
   },
   {
