--- a/data/01 - Clean.ipynb
+++ b/data/01 - Clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 484,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 485,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,15 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 486,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-08-31\n",
-      "2018-09-01\n"
+      "2018-09-02\n"
      ]
     }
    ],
@@ -78,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 487,
    "metadata": {},
    "outputs": [
     {
@@ -87,6 +86,7 @@
        "['signals-2018-08-28.csv',\n",
        " 'signals-2018-08-29.csv',\n",
        " 'signals-2018-09-01.csv',\n",
+       " 'signals-2018-09-02.csv',\n",
        " 'signals-2018-08-22.csv',\n",
        " 'signals-2018-08-23.csv',\n",
        " 'signals-2018-08-24.csv',\n",
@@ -95,7 +95,7 @@
        " 'signals-2018-08-27.csv']"
       ]
      },
-     "execution_count": 445,
+     "execution_count": 487,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 488,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 446,
+     "execution_count": 488,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,14 +312,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape (8730, 41)\n",
+      "shape (9534, 41)\n",
       "unique tickers: 178 \n"
      ]
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 490,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 491,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "[0 rows x 41 columns]"
       ]
      },
-     "execution_count": 449,
+     "execution_count": 491,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,14 +404,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 492,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape (8730, 41)\n",
+      "shape (9534, 41)\n",
       "unique tickers: 178 \n",
       "missing set()\n"
      ]
@@ -490,7 +490,7 @@
        "[1 rows x 41 columns]"
       ]
      },
-     "execution_count": 450,
+     "execution_count": 492,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "        -1, -1, 1.0, 0, 0, 0, 0]], dtype=object)"
       ]
      },
-     "execution_count": 451,
+     "execution_count": 493,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,14 +536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape (8730, 41)\n",
+      "shape (9534, 41)\n",
       "unique tickers: 178 \n",
       "missing set()\n"
      ]
@@ -622,7 +622,7 @@
        "[1 rows x 41 columns]"
       ]
      },
-     "execution_count": 452,
+     "execution_count": 494,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 495,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "[0 rows x 41 columns]"
       ]
      },
-     "execution_count": 453,
+     "execution_count": 495,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,14 +701,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 496,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape (8730, 41)\n",
+      "shape (9534, 41)\n",
       "unique tickers: 178 \n",
       "missing set()\n"
      ]
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 497,
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1952,7 @@
        "[42 rows x 41 columns]"
       ]
      },
-     "execution_count": 455,
+     "execution_count": 497,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1964,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [
     {
@@ -3052,7 +3052,7 @@
        "[37 rows x 41 columns]"
       ]
      },
-     "execution_count": 456,
+     "execution_count": 498,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3073,14 +3073,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 499,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape (8730, 41)\n",
+      "shape (9534, 41)\n",
       "unique tickers: 178 \n"
      ]
     }
@@ -3092,7 +3092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 500,
    "metadata": {},
    "outputs": [
     {
@@ -3235,7 +3235,7 @@
        "[3 rows x 42 columns]"
       ]
      },
-     "execution_count": 458,
+     "execution_count": 500,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3248,7 +3248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 501,
    "metadata": {},
    "outputs": [
     {
@@ -3796,7 +3796,7 @@
        "[18 rows x 42 columns]"
       ]
      },
-     "execution_count": 459,
+     "execution_count": 501,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3809,7 +3809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 502,
    "metadata": {},
    "outputs": [
     {
@@ -3949,7 +3949,13 @@
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/opt/conda/lib/python3.6/site-packages/ipykernel_launcher.py:28: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -3964,13 +3970,7 @@
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "/opt/conda/lib/python3.6/site-packages/ipykernel_launcher.py:32: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -4070,7 +4070,7 @@
        "[1 rows x 73 columns]"
       ]
      },
-     "execution_count": 460,
+     "execution_count": 502,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4117,7 +4117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 503,
    "metadata": {},
    "outputs": [
     {
@@ -4142,7 +4142,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 461,
+     "execution_count": 503,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4153,7 +4153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 504,
    "metadata": {},
    "outputs": [],
    "source": [
