refactor to collection 1 hour data instead of 4 hour

--- a/data/03 - Neural Nets.ipynb
+++ b/data/03 - Neural Nets.ipynb
@@ -89,13 +89,13 @@
     "\n",
     "df = pd.read_csv('signals_optimal_truth_labeled.csv')\n",
     "df.columns = ['ticker', 'price', 'time', 'meta_signal', 'meta_previous', \n",
-    "              '4h', '1d','1w', '1m', \n",
-    "              '4hp', '1dp', '1wp', '1mp', \n",
-    "              '4h_rsi', '4h_stochrsi','4h_stoch', '4h_ult', '4h_macd', '4h_hull', \n",
-    "              '1d_rsi', '1d_stochrsi','1d_stoch', '1d_ult', '1d_macd', '1d_hull', \n",
-    "              '1w_rsi', '1w_stochrsi','1w_stoch', '1w_ult', '1w_macd', '1w_hull', \n",
-    "              '1m_rsi', '1m_stochrsi','1m_stoch', '1m_ult', '1m_macd', '1m_hull',\n",
-    "              \"4h_divergence\",\"1d_divergence\",\"1w_divergence\",\"1m_divergence\",\n",
+    "              'h', 'd','w', 'm', \n",
+    "              'hp', 'dp', 'wp', 'mp', \n",
+    "              'h_rsi', 'h_stochrsi','h_stoch', 'h_ult', 'h_macd', 'h_hull', \n",
+    "              'd_rsi', 'd_stochrsi','d_stoch', 'd_ult', 'd_macd', 'd_hull', \n",
+    "              'w_rsi', 'w_stochrsi','w_stoch', 'w_ult', 'w_macd', 'w_hull', \n",
+    "              'm_rsi', 'm_stochrsi','m_stoch', 'm_ult', 'm_macd', 'm_hull',\n",
+    "              \"h_divergence\",\"d_divergence\",\"w_divergence\",\"m_divergence\",\n",
     "              'meta_move', \n",
     "              'Meta OK','Meta Good', 'Meta ⬆️', 'Meta ⬆️⬆️', 'Meta Bad', 'Meta ⬇️', 'Meta ⬇️⬇️',\n",
     "              'RSI Over Short', 'RSI Over Long', 'RSI Over All', 'RSI Under Short','RSI Under Long', 'RSI Under All', \n",
