--- a/data/alphav - 01 - Label.ipynb
+++ b/data/alphav - 01 - Label.ipynb
@@ -255,7 +255,7 @@
    "source": [
     "dfs={}\n",
     "for ind in indicators:\n",
-    "    dfs[ind] = pd.read_csv('timeseries/DIS.daily.'+ind+'.csv',index_col=None)\n",
+    "    dfs[ind] = pd.read_csv('timeseries/GOOG.daily.'+ind+'.csv',index_col=None)\n",
     "    if 'time' in dfs[ind]:\n",
     "#         print(dfs[ind].time.str.split(\" \").str.get(0))\n",
     "        dfs[ind]['timestamp'] = dfs[ind]['time'].replace(regex=r'\\s.+$', value='')\n",
@@ -771,7 +771,7 @@
    "outputs": [],
    "source": [
     "# export truth\n",
-    "df.to_csv('./DIS_joined.csv', header=None, index=None)"
+    "df.to_csv('./GOOG_joined.csv', header=None, index=None)"
    ]
   },
   {
@@ -1785,7 +1785,7 @@
    "outputs": [],
    "source": [
     "# export truth\n",
-    "df_labeled.to_csv('./labeled_DIS.csv')"
+    "df_labeled.to_csv('./labeled_GOOG.csv')"
    ]
   },
   {
@@ -1826,7 +1826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
